--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,21 @@
 }
 
 .header-container-top {
+  display: flex;
+  justify-content: space-between;
   background-color: #222222;
   color: #f3f3f3;
   font-weight: 400;
 }
 
 .header-lista {
+  display: flex;
   list-style: none;
 }
 
 .header-container-bottom {
+  display: flex;
+  justify-content: space-between;
   background-color: #f0a83e;
 }
 
@@ -33,6 +38,7 @@
 }
 
 .nav-container {
+  display: flex ;
   list-style: none;
   color: #ffffff;
   font-weight: 400;
@@ -114,6 +120,7 @@
 .footer-top {
   color: #ffffff;
   background-color: #3c2313;
+  
 }
 
 .logo-footer {
